--- a/red/templates/red/login.html
+++ b/red/templates/red/login.html
@@ -53,7 +53,7 @@
         </div>
     </section>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
-    <script src="{% static 'red/script/lib.js' %}?checksum=ba411cafee2f0f702522369da0b765e2"></script>
+    {% include "red/includes/lib.html" %}
     <script src="{% static 'red/script/login.js' %}"></script>
 </body>
 
