--- a/red/static/red/style/feed.scss
+++ b/red/static/red/style/feed.scss
@@ -1030,6 +1030,58 @@ body {
             }
         }
     }
+    .tos-link {
+        text-decoration: underline;
+        &:hover {
+            color: $offwhite;
+        }
+    }
+    >footer {
+        flex-direction: column;
+        font-family: "Inter Tight";
+        color: $lightgray;
+        padding: $inner-spacing;
+        p {
+            text-align: center;
+            width: 100%;
+            font-size: 14px;
+            margin-bottom: $inner-spacing/2;
+            &#discord-tag {
+                opacity: 0;
+                transition: 0.2s;
+                user-select: none;
+                padding: $inner-spacing/2;
+                background-color: $black;
+                border-radius: $button-radius;
+                position: absolute;
+                top: 0 - $inner-spacing;
+                transform: translate(calc(-50% + $inner-spacing), -100%);
+                font-family: 'Inter';
+                font-size: 16px;
+                width: 20vw;
+            }
+        }
+        div {
+            margin-top: $inner-spacing;
+            display: flex;
+            justify-content: space-between;
+            i {
+                font-size: 18px;
+                cursor: pointer;
+                color: $offwhite;
+                border-radius: $button-radius;
+                &#discord {
+                    position: relative;
+                    &:hover {
+                        #discord-tag {
+                            opacity: 1;
+                            user-select: auto;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 ////////////////////////////////////////////
