--- a/red/templates/red/includes/lib.html
+++ b/red/templates/red/includes/lib.html
@@ -61,4 +61,13 @@ $.fn.extend({
         });
     }
 });
+
+$("#switch").click(function() { // theme toggle
+    $(".option").toggleClass("selected");
+    $("#selector,html,body").toggleClass("light");
+    $("div.tab").css("transition-property", "all")
+    setTimeout(() => { // prevents instant switching of the top border
+        $("div.tab").css("transition-property", "color")
+    }, 200)
+})
 </script>
